[project]
name = "hitalent"
version = "0.1.0"
description = ""
authors = [
    {name = "maksim",email = "knyazev.maksim2852@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.16.5,<2.0.0)",
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "dishka (>=1.6.0,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
